Primera entrega funcional

--- a/ApplicationEF/ApplicationEF/App.config
+++ b/ApplicationEF/ApplicationEF/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="TICEntities1" connectionString="metadata=res://*/Diagrama.Modelos.csdl|res://*/Diagrama.Modelos.ssdl|res://*/Diagrama.Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=TIC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
